# Eva-Core

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
browser-functions/: .env.example  .gitignore  README.md  index.ts  package.json  pnpm-lock.yaml
playwright-scraper/: .gitignore  README.md  package.json  scrape.ts  tsconfig.json
playwright-scraper/test/: smoke.test.ts
src/eva_core/: __init__.py  __main__.py  app.py  config.py  mcp_server.py  service.py  widgets.py
src/eva_core/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py  xai_provider.py
src/eva_core/speech/: __init__.py  azure_speech.py
src/eva_core/web/: index.html
src/eva_core/web/widgets/: provider-dashboard.html  tts-player.html
tests/: conftest.py  test_api.py  test_mcp_server.py  test_providers.py
